welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:9: error: identifier expected but string literal found.
  var T = new Array[""](x)
                    ^Array1:10: error: ']' expected but ';' found.
  for (compt<- T) {
^